; ModuleID = '/home/carl/AnghaBench/openssl/crypto/extr_o_str.c_openssl_strerror_r.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/extr_o_str.c_openssl_strerror_r.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @openssl_strerror_r(i32 %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %9 = load i64, i64* %7, align 8
  %10 = icmp ult i64 %9, 2
  br i1 %10, label %11, label %12

11:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %23

12:                                               ; preds = %3
  %13 = load i32, i32* %5, align 4
  %14 = call i8* @strerror(i32 %13)
  store i8* %14, i8** %8, align 8
  %15 = load i8*, i8** %8, align 8
  %16 = icmp eq i8* %15, null
  br i1 %16, label %17, label %18

17:                                               ; preds = %12
  store i32 0, i32* %4, align 4
  br label %23

18:                                               ; preds = %12
  %19 = load i8*, i8** %6, align 8
  %20 = load i8*, i8** %8, align 8
  %21 = load i64, i64* %7, align 8
  %22 = call i32 @OPENSSL_strlcpy(i8* %19, i8* %20, i64 %21)
  store i32 1, i32* %4, align 4
  br label %23

23:                                               ; preds = %18, %17, %11
  %24 = load i32, i32* %4, align 4
  ret i32 %24
}

declare dso_local i8* @strerror(i32) #1

declare dso_local i32 @OPENSSL_strlcpy(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
